- Se agrega: font.less theme.less
Estilos Modificados:
- Botones
- Funtes primarias
- colores

--- a/src/less/workana.less
+++ b/src/less/workana.less
@@ -3,6 +3,8 @@
  * Copyright 2011-2015 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
+// fonts
+@import "workana/font.less";
 
 // Core variables and mixins
 @import "workana/variables.less";
@@ -54,3 +56,6 @@
 // Utility classes
 @import "bootstrap/utilities.less";
 @import "bootstrap/responsive-utilities.less";
+
+// theme less
+@import "workana/theme.less";
