--- a/src/less/workana/theme.less
+++ b/src/less/workana/theme.less
@@ -97,7 +97,8 @@
                     &:hover,
                     &:focus {
                         color: @navbar-inverse-link-hover-color;
-                        background-color: @navbar-inverse-link-hover-bg;
+                        background-color: transparent;
+                        border-bottom: 2px solid @gray;
                     }
                 }
                 > .active > a {
@@ -118,6 +119,7 @@
                 }
             }
         }
+
     }
 
     .navbar-link {
@@ -141,4 +143,39 @@
             }
         }
     }
+    .dropdown-menu{
+        box-shadow: none;
+        border: none;
+        padding-bottom: 0;
+        > li > a {
+            color: @dropdown-link-color;
+            border-bottom: 4px solid transparent;
+            &:hover,
+            &:focus {
+                color: @dropdown-link-color;
+                background-color: transparent;
+                border-bottom: 4px solid @gray;
+            }
+        }
+    }
+    @media (min-width: @grid-float-breakpoint-max){
+        .nav {
+            margin-bottom: 0;
+            > li.dropdown.open {
+                position: static;
+
+                .dropdown-menu {
+                    display:table;
+                    width: 100%;
+                    text-align: center;
+                    left:0;
+                    right:0;
+                }
+            }
+        }
+
+
+        .dropdown-menu>li { display: table-cell; }
+    }
+
 }
