--- a/src/less/workana.less
+++ b/src/less/workana.less
@@ -57,5 +57,14 @@
 @import "bootstrap/utilities.less";
 @import "bootstrap/responsive-utilities.less";
 
+// Ico Moon
+@import "workana/icomoon/icomoon-style.css";
+
+// WA buttons
+@import "workana/buttons.less";
+
 // theme less
 @import "workana/theme.less";
+
+// perfil css
+@import "workana/perfil.less";
