--- a/src/less/workana/theme.less
+++ b/src/less/workana/theme.less
@@ -179,3 +179,35 @@
     }
 
 }
+.jumbotron{
+    background: #f4f4f4;
+}
+
+.buscador-menu{
+    background-color: transparent;
+    border: 0;
+    font-size: 14px;
+    padding: 5px 0 0 0;
+    color: #fff;
+    opacity: .55;
+    font-weight: 400;
+    height: inherit;
+}
+
+// portfolio-item
+.portfolio-item{
+    .font-icon{
+        font-size: 20px;
+    }
+}
+.titulo-subrayado{
+    position: relative;
+
+    .subtitle-border{
+        border: 2px solid #f8b600;
+        width: 80px;
+        position: absolute;
+        bottom: -5px;
+        left: 0;
+    }
+}
