Navbar en la UI Kit

--- a/src/doc/views/perfil.html
+++ b/src/doc/views/perfil.html
@@ -6,7 +6,7 @@
 
     <link rel="stylesheet" type="text/css" href="../../less/workana.css">
 </head>
-<>
+<body>
 <!-- navbar -->
 
 <div class="wa-navbar">
