- Footer - Agregado del addon a botones abajo de la foto de perfil

--- a/src/doc/views/perfil.html
+++ b/src/doc/views/perfil.html
@@ -52,11 +52,15 @@
                         <p>
                             <img  class="" src="../../assets/perfil_img.png" alt="perfil de usuario" />
                         </p>
-                        <p>
-                            <button class="btn btn-primary">Recomendar este perfil</button>
+                        <p class="perfil-principal-btn">
+                            <button class="btn btn-primary btn-block ">
+                                <span class="font-icon font-icon-star addon-font-icon primary"></span>
+                                Recomendar</button>
                         </p>
-                        <p>
-                            <button class="btn btn-info">Compartir este perfil</button>
+                        <p class="perfil-principal-btn">
+                            <button class="btn btn-info btn-block text-left">
+                                <span class="font-icon font-icon-twitter addon-font-icon info"></span>
+                                Compartir este perfil</button>
                         </p>
 
                     </div>
@@ -478,6 +482,7 @@
                 </div>
             </div>
 
+
         </div>
         <!--end Skills-->
     </div>
@@ -496,7 +501,7 @@
             <div class="col-lg-4">
                 <h3>Buscar otros profesionales</h3>
                 <input type="text" class="form-control col-lg-8" placeholder="Buscar por skills.." />
-                <ul class="list-unstyled">
+                <ul class="list-unstyled info">
 
                     <li>CSS Developers & Designers</li>
                     <li>HTML Developers</li>
@@ -516,6 +521,63 @@
 
 
 </div>
+<footer>
+    <div class="container">
+        <div class="row copy">
+            <p>© 2016 Workana LLC - Todos los derechos reservados</p>
+        </div>
+        <div class="row links">
+            <div class="col-lg-4">
+                <img src="../../assets/global_map.png" alt="Global Map" />
+            </div>
+            <div class="col-lg-8">
+                <ul class="list-unstyled pull-left">
+                    <li><a class="info" href="#">Cómo funciona</a></li>
+                    <li><a class="info" href="#">Casos de éxito</a></li>
+                    <li><a class="info" href="#">Hecho en América Latina</a></li>
+                    <li><a class="success" href="#">Blog</a></li>
+                    <li><a class="success" href="#">Centro de ayuda</a></li>
+                    <li><a class="primary" href="#">Sobre nosotros</a></li>
+                    <li><a class="primary" href="#">Contacto</a></li>
+                </ul>
+                <ul class="list-unstyled pull-left">
+                    <li><a class="info" href="#">Estadísticas y tendencias</a></li>
+                    <li><a class="info" href="#">Tutoriales para clientes</a></li>
+                    <li><a class="info" href="#">Tutoriales para profesionales</a></li>
+                    <li><a class="success" href="#">Políticas de Workana</a></li>
+                    <li><a class="success" href="#">Política de privacidad</a></li>
+                    <li><a class="primary" href="#">Términos del servicio</a></li>
+                    <li><a class="primary" href="#">Acuerdo de usuario</a></li>
+                    <li><a class="primary" href="#">Empresas</a></li>
+                    <li><a class="primary" href="#">Workana Time Report</a></li>
+                    <li><a class="primary" href="#">Workana API</a></li>
+                </ul>
+                <ul class="list-unstyled pull-left">
+                    <li><a class="info" href="#">IT & Programación</a></li>
+                    <li><a class="info" href="#">Diseño & Multimedia</a></li>
+                    <li><a class="info" href="#">Traducción & Contenidos</a></li>
+                    <li><a class="success" href="#">Marketing & Ventas</a></li>
+                    <li><a class="success" href="#">Soporte Administrativo</a></li>
+                    <li><a class="primary" href="#">Legal</a></li>
+                    <li><a class="primary" href="#">Finanzas & Administración</a></li>
+                    <li><a class="primary" href="#">Ingeniería & Manufactura</a></li>
+                </ul>
+                <ul class="list-unstyled pull-left">
+                    <li><a class="info" href="#">Freelancers Argentina</a></li>
+                    <li><a class="info" href="#">Freelancers Brasil</a></li>
+                    <li><a class="info" href="#">Freelancers Colombia</a></li>
+                    <li><a class="success" href="#">Freelancers Uruguay</a></li>
+                    <li><a class="success" href="#">Freelancers Chile</a></li>
+                    <li><a class="primary" href="#">Freelancers México</a></li>
+                    <li><a class="primary" href="#">Freelancers Venezuela</a></li>
+                    <li><a class="primary" href="#">Freelancers Paraguay</a></li>
+                    <li><a class="primary" href="#">Freelancers Honduras</a></li>
+                </ul>
+
+            </div>
+        </div>
+    </div>
+</footer>
 </body>
 <script src="../../js/workana-compile.js"></script>
 </html>
