--- a/src/less/workana.css
+++ b/src/less/workana.css
@@ -7057,12 +7057,44 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
 .recomendacion-item {
   border-bottom: 1px solid #d8d8d8;
 }
+.addon-font-icon {
+  background: #fff;
+  padding: 6px 8px 8px;
+  margin-left: -10px;
+  margin-right: 5px;
+  -webkit-border-top-left-radius: 4px;
+  -webkit-border-bottom-left-radius: 4px;
+  -moz-border-radius-topleft: 4px;
+  -moz-border-radius-bottomleft: 4px;
+  border-top-left-radius: 4px;
+  border-bottom-left-radius: 4px;
+}
 .perfil-icons span.font-icon {
   font-size: 40px;
+}
+.perfil-principal-btn button.btn {
+  text-align: left;
 }
 .perfil-principal-contratame {
   background: #fff;
   padding: 30px;
+}
+footer {
+  background-color: #1f1f1f;
+  border-color: #1f1f1f;
+}
+footer .copy {
+  border-bottom: 1px dashed #d8d8d8;
+}
+footer .copy p {
+  color: #d8d8d8;
+  margin: 10px;
+}
+footer .links {
+  padding-top: 40px;
+}
+footer .links ul {
+  padding: 1em;
 }
 .navbar-brand {
   padding: 5px 10px;
