--- a/src/less/workana/theme.less
+++ b/src/less/workana/theme.less
@@ -253,6 +253,18 @@
 
 
 // Perfil icons
+.addon-font-icon{
+    background: #fff;
+    padding: 6px 8px 8px;
+    margin-left: -10px;
+    margin-right: 5px;
+    -webkit-border-top-left-radius: 4px;
+    -webkit-border-bottom-left-radius: 4px;
+    -moz-border-radius-topleft: 4px;
+    -moz-border-radius-bottomleft: 4px;
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+}
 .perfil-icons {
     span {
         &.font-icon {
@@ -260,8 +272,35 @@
         }
     }
 }
-// PErfil contratame
+// Perfiles botones
+.perfil-principal-btn{
+    button{
+        &.btn{
+            text-align: left;
+        }
+    }
+}
+// Perfil contratame
 .perfil-principal-contratame{
     background: #fff;
     padding: 30px;
+}
+// footer
+footer{
+    background-color: @navbar-inverse-bg;
+    border-color: @navbar-inverse-bg;
+    .copy{
+        border-bottom: 1px dashed @gray;
+        p{
+            color: @gray;
+            margin: 10px;
+        }
+    }
+    .links{
+        padding-top: 40px;
+        ul{
+            padding: 1em;
+        }
+    }
+
 }
