--- a/src/less/workana/buttons.less
+++ b/src/less/workana/buttons.less
@@ -2,5 +2,5 @@
     .button-variant(@gray-darker;  @gray-light; transparent);
 }
 .btn-grey{
-    .button-variant(#ffffff;  @gray; transparent);
+    .button-variant(@gray-base;  @gray; transparent);
 }
