--- a/src/doc/views/perfil.html
+++ b/src/doc/views/perfil.html
@@ -48,7 +48,7 @@
         <div class="row">
             <div class="col-md-8">
                 <div >
-                    <div class="col-md-4 text-center">
+                    <div class="col-md-4 text-center wa-profile">
                         <p>
                             <img  class="" src="../../assets/perfil_img.png" alt="perfil de usuario" />
                         </p>
